got it working haha

--- a/maestro/app/styles/main.scss
+++ b/maestro/app/styles/main.scss
@@ -2,5 +2,17 @@
 
 .hero-unit {
     margin: 50px auto 0 auto;
-    width: 300px;
+    width: 90%;
+    padding-top: 0px;
+}
+
+.pageName {
+    padding-top: 60px;
+}
+#flashcontainer {
+    float: right;
+}
+
+#live-chord {
+    margin-top: 50px;
 }
